// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropMenuButton default 1`] = `
<div
  className="sc-kkGfuU kDgOxc sc-ckVGcZ iZXgcY sc-kpOJdX bXCMzD"
  disabled={false}
  type="customs"
>
  <span
    className="sc-jDwBTQ dNzWnx"
    disabled={false}
    type="customs"
  />
  <div
    className="sc-iAyFgw qieXy sc-dxgOiQ gmLpER"
  >
    <span
      checked={false}
      className="sc-hSdWYo gjtzhE sc-kEYyzF kxWEBa"
      disabled={false}
      type="customs"
    >
      <input
        className="sc-kGXeez huERGx"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </span>
    <span
      checked={false}
      className="sc-jAaTju bYnDqT"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="customs"
    >
      <input
        className="sc-kGXeez huERGx"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down  sc-iwsKbI cbTaGu"
      />
    </span>
  </div>
</div>
`;

exports[`DropMenuButton divided={false} 1`] = `
<div
  checked={false}
  className="sc-jKJlTe idCzGo sc-ckVGcZ iZXgcY sc-kpOJdX bXCMzD"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="customs"
>
  <input
    className="sc-kGXeez huERGx"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-eNQAEJ tEOjX sc-dxgOiQ gmLpER"
  >
    <span
      className="sc-kEYyzF kxWEBa"
    />
    <span
      className="sc-hMqMXs bUVEqw"
    >
      <i
        className="lugia-icon-direction_down  sc-iwsKbI cbTaGu"
      />
    </span>
  </div>
</div>
`;

exports[`DropMenuButton type=basic 1`] = `
<div
  className="sc-eHgmQL cnLtTb sc-kpOJdX bXCMzD"
>
  <div
    checked={false}
    className="sc-cvbbAY kTKSTj sc-dxgOiQ gmLpER"
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      className="sc-kGXeez huERGx"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    />
    <span
      checked={false}
      className="sc-jWBwVP eBgsec"
      disabled={false}
    >
      <span
        className="sc-brqgnP cDLxgy"
      />
      <span
        className="sc-cMljjf heWFwA sc-hMqMXs bUVEqw"
      >
        <i
          className="lugia-icon-direction_down  sc-iwsKbI cbTaGu"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`DropMenuButton type=primary,divided={true} 1`] = `
<div
  className="sc-kkGfuU kDgOxc sc-ckVGcZ fJbgaW sc-kpOJdX bXCMzD"
  disabled={false}
  type="primary"
>
  <span
    className="sc-jDwBTQ hXZrlh"
    disabled={false}
    type="primary"
  />
  <div
    className="sc-iAyFgw qieXy sc-dxgOiQ gmLpER"
  >
    <span
      checked={false}
      className="sc-hSdWYo jeadcr sc-kEYyzF kxWEBa"
      disabled={false}
      type="primary"
    >
      <input
        className="sc-kGXeez huERGx"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </span>
    <span
      checked={false}
      className="sc-jAaTju jsuUDF"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="primary"
    >
      <input
        className="sc-kGXeez huERGx"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down  sc-iwsKbI cbTaGu"
      />
    </span>
  </div>
</div>
`;
